# dedupliFHIR

./: .deduped_record_mapping.xlsx  .env  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  code.json  package-lock.json  package.json  patients-edit.json  pyproject.toml  requirements.txt  set-up-python-env.sh
.github/: SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto_merge.yml  checks.yml  continuous_integration.yml  linux_release.yml  release.yml
app/: __init__.py  utils.py  views.py
app/static/css/: reset.css  style.css
app/templates/: base.html  detail.html  index.html  list.html  preview.html  train.html
app/templates/partials/: training-record.html
cli/: ecqm-dedupe.py  ecqm_dedupe.py  ecqm_deduplifhir.py
cli/deduplifhirLib/: duplicate_data_generator.py  normalization.py  settings.py  splink_settings.json  test_data.csv  test_data_columns.json  tests.py  utils.py
deduplifhirLib/: __init__.py  settings.py  utils.py
frontend/: .eslintrc.cjs  .eslintrc.js  constants.js  error.html  eslint.config.mjs  index.html  loading.html  main.js  package-lock.json  package.json  preload.js  renderer.js  renderer_success.js  success.html
frontend/assets/: DedupliFHIR-Icon-MacOS.icns  DedupliFHIR-Icon-Windows.icns
frontend/constants/: constants.js
frontend/css/: style.css
frontend/pages/: error.html  loading.html  success.html
frontend/renderer/: renderer-success.js  renderer.js
frontend/tests/: frontend.spec.js
research/sept-2024/: examples-of-sort-and-filter.md  examples-use-clusterid-to-find-possible-duplicates.md  examples-using-clusterid-to-find-possible-duplicates.md  how-to-find-possible-duplicates.md  request-for-ACO-participants.md  use-clusterid-to-find-possible-duplicates.md
scripts/: clean_patients.py  dedupe_fhir.py  group_by_cluster.py  patient_fhir_to_csv.py
(+5 files in other folders)
