[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Pat Sier <patrick.sier@cms.hhs.gov>",
    "Isaac Milarsky <imilarsky@gmail.com>" ]

[tool.poetry.dependencies]
python = "^3.10"
splink = "^3.9.15"
click = "^8.1.7"
pandas = "^2.2.2"
faker = "^26.0.0"
pytest = "^8.2.2"
openpyxl = "^3.1.5"
lxml = "^5.2.2"
pyarrow = "^16.1.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true